trunk/Archive2/e7/c0ce921e1a00c1/output
main.cpp: In function 'int main()':
main.cpp:9:20: error: request for member 'x' in 't', which is of pointer type 'test*' (maybe you meant to use '->' ?)
     std::cout << t.x;
                    ^
