trunk/Archive2/e7/c0ce921e1a00c1/main.cpp
struct test {
    static const int x = 10;
};

#include <iostream>

int main() {
    test* t = new test;
    std::cout << t.x;
}